Fix slider svg cut off

--- a/docs/index.css
+++ b/docs/index.css
@@ -216,7 +216,7 @@ a:visited {
 }
 
 #slider {
-  width: 294px;
+  width: 255px;
 }
 
 #sliderdiv {
